--- a/application/modules/default/views/scripts/appraisalself/edit.phtml
+++ b/application/modules/default/views/scripts/appraisalself/edit.phtml
@@ -129,6 +129,7 @@ if(empty($this->check_ratings_exists)) { ?>
 	$ratVal = $this->ratingValues;
 	$managerNames = $this->managerNames;
 	$appStatus = $empRatData[0]['appraisal_status'];
+    $numOfObjectivesRequired = REQUIRED_OBJECTIVES_COUNT;
 	
 	$appText = '';
 		
@@ -229,7 +230,15 @@ if(empty($this->check_ratings_exists)) { ?>
                                                     <span class="appri_desc"><?php echo $qd['question'] . " - Only for managers.";?></span>
                                                 <?php } elseif($qd['pa_type_id'] == QUESTION_TYPE_OBJECTIVE) { ?>
                                                     <span class="appri_desc"><?php echo $qd['question']; ?></span>
-                                                    <textarea onkeyup="removeValidationMessage(this)" class="app_non_req_field appri_textarea objective_text_<?php echo $qd['id']; ?>" name="emp_question_objectives[<?php echo $qd['id'];?>]" id="idquestion_objectives_<?php echo $empRatData[0]['employee_id'];?>_<?php echo $qd['id'];?>" style="height:100px"><?php if(isset($empRes[$qd['id']]['objective'])){echo $empRes[$qd['id']]['objective'];}?></textarea>
+                                                    <textarea onkeyup="removeValidationMessage(this)"
+                                                              class="appri_textarea objective_text_<?php echo $qd['id']; ?>
+                                                        <?php if($numOfObjectivesRequired > 0)
+                                                            {
+                                                                echo "app_req_field";
+                                                            } else {
+                                                                echo "app_non_req_field";
+                                                            } ?>
+                                                    " name="emp_question_objectives[<?php echo $qd['id'];?>]" id="idquestion_objectives_<?php echo $empRatData[0]['employee_id'];?>_<?php echo $qd['id'];?>" style="height:100px"><?php if(isset($empRes[$qd['id']]['objective'])){echo $empRes[$qd['id']]['objective'];}?></textarea>
                                                 <?php } else { ?>
                                                     <span class="appri_ques"><?php echo $qd['question'];?></span>
                                                     <span class="appri_desc"><?php echo $qd['description'];?></span>
@@ -292,8 +301,11 @@ if(empty($this->check_ratings_exists)) { ?>
                                                 <?php
                                             } elseif($qd['pa_type_id'] == QUESTION_TYPE_OBJECTIVE){ ?>
                                                 <td>
-                                                        <?php $priv_data = $qpData[$qd['id']];?>
-                                                <select name="emp_achievement[<?php echo $qd['id'];?>]" <?php if($priv_data['EC'] != 1) echo 'readonly';?>>
+                                                        <?php
+                                                            $priv_data = $qpData[$qd['id']];
+                                                            $selectClass = ($numOfObjectivesRequired > 0)?"app_req_field select_field":"";
+                                                        ?>
+                                                <select class="<?php echo $selectClass; ?>" name="emp_achievement[<?php echo $qd['id'];?>]" <?php if($priv_data['EC'] != 1) echo 'readonly';?> onchange="removeValidationMessage(this)" id="emp_select_<?php echo $qd['id'];?>">
                                                     <option value="" selected> -- Achievement -- </option>
                                                     <option value="Achieved" <?php if(isset($empRes[$qd['id']]['achievement']) && $empRes[$qd['id']]['achievement'] == "Achieved") echo "selected"; ?>>Achieved</option>
                                                     <option value="Partially Achieved" <?php if(isset($empRes[$qd['id']]['achievement']) && $empRes[$qd['id']]['achievement'] == "Partially Achieved") echo "selected"; ?>>Partially Achieved</option>
@@ -301,7 +313,19 @@ if(empty($this->check_ratings_exists)) { ?>
                                                 </select>
                                                 </td>
                                                 <td colspan="3">
-                                                    <textarea onkeyup="removeValidationMessage(this)" <?php if($priv_data['EC'] == 1){echo 'class="app_req_field appri_textarea"';}else{echo 'class="appri_textarea_new app_non_req_field" readonly placeholder="Only for managers." style="background-color:silver"';}?> name="emp_comment[<?php echo $qd['id'];?>]" id="emp_comment_<?php echo $qd['id'];?>" rows="2" cols="15"><?php if(isset($empRes[$qd['id']]['comment'])){echo $empRes[$qd['id']]['comment'];}?></textarea>
+                                                    <textarea onkeyup="removeValidationMessage(this)"
+                                                        <?php if($priv_data['EC'] == 1)
+                                                        {
+                                                            if($numOfObjectivesRequired > 0){
+                                                                echo 'class="app_req_field appri_textarea"';
+                                                                $numOfObjectivesRequired--;
+                                                            } else {
+                                                                echo 'class="app_non_req_field appri_textarea"';
+                                                            }
+                                                        } else {
+                                                            echo 'class="appri_textarea_new app_non_req_field" readonly placeholder="Only for managers." style="background-color:silver"';}?>
+
+                                                    name="emp_comment[<?php echo $qd['id'];?>]" id="emp_comment_<?php echo $qd['id'];?>" rows="2" cols="15"><?php if(isset($empRes[$qd['id']]['comment'])){echo $empRes[$qd['id']]['comment'];}?></textarea>
                                                     <input class="app_non_req_field" type="hidden" id="emp_rating_<?php echo $qd['id'];?>" name="emp_rating[<?php echo $qd['id'];?>]" value="<?php if(isset($empRes[$qd['id']]['rating_id']) && isset($ratVal[$empRes[$qd['id']]['rating_id']])){echo $ratVal[$empRes[$qd['id']]['rating_id']];}?>" />
                                                 </td>
                                            <?php } ?>
