--- a/public/media/css/style.css
+++ b/public/media/css/style.css
@@ -2144,6 +2144,7 @@ padding: 3px 8px; resize:none; line-height: 20px; outline:none; overflow-y: auto
 -moz-border-radius:5px;
 -webkit-border-radius:5px;
 border-radius:5px;*/ }
+.appri_select, .rateit {  float:left; }
 .requisition-table .new-form-ui textarea, .requisition-table .appri_textarea, .requisition-table .textarea_two_appri { width:85%;}
 
 .employee_appraisal-table textarea.appri_textarea, .employee_appraisal-table textarea.appri_textarea_new{ background:#fff; cursor:auto;   width: 87%;}
