--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -181,7 +181,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
                                 <?php } elseif($ques['question_type'] == QUESTION_TYPE_COMMENT_ACHIEVEMENT){ ?>
                                     <td>
                                         <input tabindex="-1" class="app_non_req_field" type="hidden" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" name="question_rating[<?php echo $ques['question_id'];?>]" value="<?php echo $qrating==""?0:$qrating;?>">
-                                        <select name="question_achievement[<?php echo $ques['question_id'];?>]" <?php if($priv_data['MR'] != 1) echo 'readonly'; else echo 'class="app_req_field_'.$main_key.'"';?>>
+                                        <select name="question_achievement[<?php echo $ques['question_id'];?>]" <?php if($priv_data['MR'] != 1) echo 'readonly'; else echo 'class="app_req_field_'.$main_key.' achievement_select_'.$main_key.' appri_select"';?> id="question_achievement_select_<?php echo $ques['question_id'];?>" onchange="removeValidationMessage(this);">
                                             <option disabled selected value=""> -- Achievement -- </option>
                                             <option value="Achieved" <?php if($qachievement == "Achieved") echo "selected"; ?>>Achieved</option>
                                             <option value="Partially Achieved" <?php if($qachievement == "Partially Achieved") echo "selected"; ?>>Partially Achieved</option>
@@ -214,15 +214,15 @@ if(count($data) > 0 && !empty($data['rating_arr']))
                                     ?>
                                     <td>
                                         <input tabindex="-1" class="app_non_req_field" type="hidden" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" name="question_rating[<?php echo $ques['question_id'];?>]" value="<?php echo $qrating==""?0:$qrating;?>">
-                                        <select <?php if(!$required) echo "disabled";?> name="question_achievement[<?php echo $ques['question_id'];?>]" class="<?php echo $class; ?> objective_achievement_select_<?php echo $ques['question_id']; ?>">
-                                            <option selected value=""> -- Achievement -- </option>
+                                        <select <?php if(!$required) echo "disabled";?> name="question_achievement[<?php echo $ques['question_id'];?>]" class="<?php echo $class; ?> achievement_select_<?php echo $main_key; ?> appri_select" id="question_achievement_select_<?php echo $ques['question_id'];?>" onchange="removeValidationMessage(this);">
+                                            <option disabled selected value=""> -- Achievement -- </option>
                                             <option value="Achieved" <?php if($qachievement == "Achieved") echo "selected"; ?>>Achieved</option>
                                             <option value="Partially Achieved" <?php if($qachievement == "Partially Achieved") echo "selected"; ?>>Partially Achieved</option>
                                             <option value="Not Achieved" <?php if($qachievement == "Not Achieved") echo "selected"; ?>>Not Achieved</option>
                                         </select>
                                     </td>
                                     <td>
-                                        <textarea <?php if(!$required) echo "readonly";?> onkeyup="removeValidationMessage(this)" class="<?php echo $class; ?> appri_textarea objective_comment_<?php echo $ques['question_id']; ?>" name="question_comments[<?php echo $ques['question_id'];?>]" id="idquestion_comments_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>"><?php echo $qcomment;?></textarea>
+                                        <textarea <?php if(!$required) echo "readonly";?> onkeyup="removeValidationMessage(this)" class="<?php echo $class; ?> appri_textarea_<?php echo $main_key; ?> textarea_two_appri objective_comment_<?php echo $ques['question_id']; ?>" name="question_comments[<?php echo $ques['question_id'];?>]" id="idquestion_comments_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>"><?php echo $qcomment;?></textarea>
                                     </td>
                                 <?php } ?>
                             <?php } else { ?>
@@ -386,9 +386,10 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             }
         });
         
-	    $('.appri_textarea_'+key).each(function(){
+	    $('.appri_textarea_'+key+':not([readonly])').each(function(){
             var qval = $(this).val();
             var qid = $(this).prop('id');
+
             if(qval == '')
             {
             	req_count++;
@@ -419,6 +420,21 @@ if(count($data) > 0 && !empty($data['rating_arr']))
 					$(this).removeClass('borderclass');
 			}
         });
+
+        $('.achievement_select_'+key+':enabled').each(function(){
+            var qval = $(this).val();
+            var qid = $(this).prop('id');
+
+            if(qval == '' || qval == null)
+            {
+                req_count++;
+                $('#'+qid).parent().append("<span class='errors errors_"+qid+"' id='err-"+qid+"'>Please select achievement rating.</span>");
+                if ($.inArray(7, errorarray) == -1) {
+                    errorarray.push(7);
+                }
+            }
+        });
+
 	    if(req_count == 0)
 	    {    
 	    	$.blockUI({ width:'50px',message: $("#spinner").html() });
@@ -437,7 +453,9 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             		html+="<span class='alert_info_span'>"+(i+1)+". Please enter comments.</span>"; 
           	  else if(val==5)
             		html+="<span class='alert_info_span'>"+(i+1)+". Please select ratings for skills.</span>"; 		
-          	});
+              else if(val==7)
+                    html+="<span class='alert_info_span'>"+(i+1)+". Please select achievement ratings.</span>";
+            });
           jAlert(html);    
 	    	return false;
 	    }
