--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -307,8 +307,6 @@ if(count($data) > 0 && !empty($data['rating_arr']))
     </div>
     <?php if(empty($this->history_flag)) { ?>            
     <div class="new-form-ui-submit">
-        <input type="checkbox" name="agreement" style="margin-left:1%; margin-bottom:15px;" id="requiredAgreementCheckbox"/>
-        <label for="agreement" id="requiredAgreementLabel">I agree with...</label><br/>
         <input type="button" name="btn_submit_<?php echo $main_key;?>" id="idbtn_submit_<?php echo $main_key;?>" value="Submit" />
         <input type="button" name="btn_draft_<?php echo $main_key;?>" id="idbtn_draft_<?php echo $main_key;?>" value="Save as Draft" />
         <input type="button" name="btn_cancel_<?php echo $main_key;?>" id="idbtn_cancel_<?php echo $main_key;?>" value="Cancel" onclick="cancel_accordian(this.id,<?php echo $main_key;?>);"/>
@@ -475,8 +473,8 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             		html+="<span class='alert_info_span'>"+(i+1)+". Please enter comments.</span>"; 
           	  else if(val==5)
             		html+="<span class='alert_info_span'>"+(i+1)+". Please select ratings for skills.</span>";
-              else if(val==6)
-                    html+="<span class='alert_info_span'>"+(i+1)+". Please click on \"I agree with...\" button.</span>";
+              else if(val==7)
+                    html+="<span class='alert_info_span'>"+(i+1)+". Please select achievement ratings.</span>";
             });
           jAlert(html);    
 	    	return false;
