--- a/application/modules/default/views/scripts/appraisalself/edit.phtml
+++ b/application/modules/default/views/scripts/appraisalself/edit.phtml
@@ -161,6 +161,9 @@ if(empty($this->check_ratings_exists)) { ?>
 						<div class="lis_div"><span>Department :</span> <?php echo $empRatData[0]['department_name'];?></div>
 					</div>
 					<div class="appraisal_due_date"><span>Due Date :</span> <?php echo sapp_Global::change_date($empRatData[0]['employees_due_date'],'view');?></div>
+                    <div class="appril_sel_stat_comp_msg">
+                            <span class="label_10">Appraisal Status : </span><div class="appr_completed"><span><?php echo $appStatus; ?></span></div>
+                    </div>
 					<div class="new-form-ui-submit employee_appraisal_submit">
 						<input type="button" class="rating_help_txt" value="Ratings Definition" onclick="checkratingstext();"/>
 					</div>
