--- a/application/modules/default/views/scripts/appraisalself/index.phtml
+++ b/application/modules/default/views/scripts/appraisalself/index.phtml
@@ -177,7 +177,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 		if(sizeof($catData)>0) 
 		{
 		    if(in_array($appStatus,  array(APP_PENDING_EMP_FINAL, APP_COMPLETED))){ ?>
-                <li><a href="#tabs-final">Final Feedback</a></li>
+                <li><a href="#tabs-final">Final Employee Feedback</a></li>
             <?php }
 			foreach ($catData as $cd)
 			{ 				
@@ -197,7 +197,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
                                 <table width="100%" border="0" cellspacing="0" cellpadding="0" style="clear:both;" class="employee_appraisal-table">
                                     <thead>
                                     <tr>
-                                        <th>Final Feedback (optional)</th>
+                                        <th>Final Employee Feedback (optional)</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -231,7 +231,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
                     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="clear:both;" class="employee_appraisal-table">
                         <thead>
                         <tr>
-                            <th>Final Feedback (optional)</th>
+                            <th>Final Employee Feedback (optional)</th>
                         </tr>
                         </thead>
                         <tbody>
