--- a/application/modules/default/views/scripts/myteamappraisal/appraisalpdf.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/appraisalpdf.phtml
@@ -178,7 +178,7 @@
             //final emp response ?>
             <tr>
                 <td>
-                    <font face="'Arial', sans-serif" size="3"><strong>Final employee feedback</strong></font>
+                    <font face="'Arial', sans-serif" size="3"><strong>Final Employee Feedback</strong></font>
 
                     <table border="1" cellpadding="8" cellspacing="0" width="800" style="border-collapse:collapse; margin-top: 10px;">
                         <tr>
