--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -463,7 +463,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
 <?php	}
 	}
     if($emp_status == 'Completed'){ ?>
-        <li><a href="#tabs-final">Final Feedback</a></li>
+        <li><a href="#tabs-final">Final Employee Feedback</a></li>
 	<?php }
 	if($ratings_data['skill_response']!=''){
 ?>          <li><a href="#tabs-<?php echo $key+1;?>">Skill set</a></li>
@@ -521,7 +521,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             <table width="100%" border="0" cellspacing="0" cellpadding="0" style="clear:both;" class="employee_appraisal-table">
                 <thead>
                     <tr>
-                        <th>Final Feedback (optional)</th>
+                        <th>Final Employee Feedback (optional)</th>
                     </tr>
                 </thead>
                 <tbody>
