Added forgotten new status

--- a/application/modules/default/views/scripts/appraisalhistoryteam/view.phtml
+++ b/application/modules/default/views/scripts/appraisalhistoryteam/view.phtml
@@ -44,7 +44,7 @@ else
 	$emp_data = $this->emp_data;
     $manager_id = $this->manager_id;
     $status_arr = array(0 => 'Pending employee ratings',1 => 'Pending L1 ratings',2 => 'Pending L2 ratings',
-                3 => 'Pending L3 ratings',4 => 'Pending L4 ratings',5 => 'Pending L5 ratings',6 => 'Completed');  
+                3 => 'Pending L3 ratings',4 => 'Pending L4 ratings',5 => 'Pending L5 ratings',6 => 'Pending employee finalization', 7 => 'Completed');
                 
     if(count($emp_data) > 0)
     {
