Added Help link for documents to appraisal

--- a/application/modules/default/views/scripts/appraisalself/index.phtml
+++ b/application/modules/default/views/scripts/appraisalself/index.phtml
@@ -82,7 +82,8 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 						
 				</div>
 				<div class="new-form-ui-submit employee_appraisal_submit" style="top: 2px; right: 6px; position: absolute;">
-						<input type="button" class="rating_help_txt" value="Ratings Definition" onclick="checkratingstext();"/>
+                    <a href="<?php echo APPRAISAL_HELP_LINK?>" target="_blank" class="help_link">Help</a>
+                    <input type="button" class="rating_help_txt" value="Ratings Definition" onclick="checkratingstext();"/>
 				</div>
 			</div>
 		
