--- a/public/media/css/style.css
+++ b/public/media/css/style.css
@@ -1472,7 +1472,7 @@ color: #545454;}
     min-width:110px; 
 	height:35px;  */
 	background-color: #ffffff;	
-	min-height: 121px;
+	/*min-height: 121px;*/
    /* width: 160px;*/
 	position: absolute;
     right: 0;
