fixed confirmation title

--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -443,7 +443,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
 	    if(req_count == 0)
 	    {
             var msg = "<?php echo APPRAISAL_AGREEMENT_TEXT;?>";
-            jConfirm(msg, "I agree", function(resp) {
+            jConfirm(msg, "Confirmation", function(resp) {
                 if(resp){
                     $.blockUI({ width:'50px',message: $("#spinner").html() });
                     $('#idfrm_manager_response_'+key).submit();
