importing employees now supports import of all employees at once, even if their reporting managers are being imported at the same time

--- a/application/modules/default/views/scripts/employee/index.phtml
+++ b/application/modules/default/views/scripts/employee/index.phtml
@@ -123,7 +123,7 @@ new AjaxUpload(btnUpload, {
 	    try
             {
                 var result = JSON.parse(response);
-                if(result.result == 'success')
+                if(result.status == 'success')
                 {                        
                     $('#upload_error').show();
                     $("#loaderimgprofile").hide();
